# options-ai-platform

./: .dockerignore  .gitignore  README.md  fix.txt  trigger.txt
backend/api/: Dockerfile  README.md  error_handlers.py  errors.py  main.py  models.py  requirements.txt  settings.py
copilot/: .workspace
copilot/api/: manifest.yml
engine/coveredcall-agents/: .gitignore  README.md  makefile  pyproject.toml
engine/coveredcall-agents/cli/: logging_setup.py  main.py
engine/coveredcall-agents/coveredcall_agents/: __init__.py
engine/coveredcall-agents/coveredcall_agents/agentic/: __init__.py  agentic_contracts.py  dispatch.py  normalization.py
engine/coveredcall-agents/coveredcall_agents/agents/: __init__.py  agentic_node.py  debate_agents.py  divergence_node.py  fundamental_agent.py  llm_node.py  mode_accessors.py
engine/coveredcall-agents/coveredcall_agents/api/: run_analysis.py
engine/coveredcall-agents/coveredcall_agents/cli/: logging_setup.py  main.py
engine/coveredcall-agents/coveredcall_agents/config/: __init__.py  config.py  default_config.py
engine/coveredcall-agents/coveredcall_agents/contracts/: enums.py
engine/coveredcall-agents/coveredcall_agents/fundamentals/: __int__.py  final_resolver.py  mode.py  mode_helpers.py
engine/coveredcall-agents/coveredcall_agents/graph/: __init__.py  covered_call_graph.py  node_ids.py  state.py
engine/coveredcall-agents/coveredcall_agents/llm/: bedrock_client.py  client.py  debate_prompts.py  fundamentals_prompt.py  mock_client.py  providers.py
engine/coveredcall-agents/coveredcall_agents/tools/: agentic_tools.py  fundamentals.py  fundamentals_yfinance.py  registry.py
engine/coveredcall-agents/coveredcall_agents/trade_policy/: __init__.py  stance_action.py
engine/coveredcall-agents/coveredcall_agents/utils/: divergence.py  logging.py  makefile
engine/coveredcall-agents/scripts/: smoke.sh  validate_first_json.py
engine/coveredcall-agents/tests/: conftest.py  test_analyze.py  test_cli_regression.py  test_cli_smoke.py  test_divergence.py  test_final_resolver.py  test_fundamentals_resolver_node.py  test_graph_smoke.py  test_mode_normalization.py  test_provider_switch.py  test_report_action_fields.py  test_trade_policy.py
engine/coveredcall-agents/tests/cli/: test_cli_json_contract.py
infrastructure/: dev.env.params.json  dev.env.yml
(+28 files in other folders)
