[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "coveredcall-agents"
version = "0.1.0"
description = "Graph-first, tool-driven covered call trading agents (TradingAgents-style architecture)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kanir Pandya" }]

dependencies = [
  "pydantic>=2.0",
  "langgraph>=0.0.40",
  "yfinance>=0.2.40"
]
[project.scripts]
covered-call-agentic = "cli.main:main"
covered-call = "cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.5",
]

[tool.setuptools]
# Use automatic package discovery (recommended)

[tool.setuptools.packages.find]
where = ["."]
include = ["coveredcall_agents*", "cli*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
